--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,7 +43,7 @@ p {
     font-size: 20px;
     line-height: 1.71;
     color: #fff;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     text-transform: uppercase;
     margin-left: 40px;
 }
@@ -55,6 +55,7 @@ p {
     color: #fff;
     margin-bottom: 25px;
     margin-left: 40px;
+    margin-top: 40px;
 }
 
 .about-description{
